@@ -294,21 +294,24 @@ class Fixtures < YAML::Omap
     def read_fixture_files
       if File.file?(yaml_file_path)
         # YAML fixtures
+        yaml_string = ""
+        Dir["#{@fixture_path}/**/*.yml"].select {|f| test(?f,f) }.each do |subfixture_path|
+          yaml_string << IO.read(subfixture_path)
+        end
+        yaml_string << IO.read(yaml_file_path)
         begin
-          yaml_string = ""
-          Dir["#{@fixture_path}/**/*.yml"].select {|f| test(?f,f) }.each do |subfixture_path|
-            yaml_string << IO.read(subfixture_path)
-          end
-          yaml_string << IO.read(yaml_file_path)
-
-          if yaml = YAML::load(erb_render(yaml_string))
-            yaml = yaml.value if yaml.respond_to?(:type_id) and yaml.respond_to?(:value)
-            yaml.each do |name, data|
-              self[name] = Fixture.new(data, @class_name)
-            end
-          end
+          yaml = YAML::load(erb_render(yaml_string))
         rescue Exception=>boom
           raise Fixture::FormatError, "a YAML error occurred parsing #{yaml_file_path}. Please note that YAML must be consistently indented using spaces. Tabs are not allowed. Please have a look at http://www.yaml.org/faq.html\nThe exact error was:\n  #{boom.class}: #{boom}"
+        end         
+        if yaml
+          yaml = yaml.value if yaml.respond_to?(:type_id) and yaml.respond_to?(:value)
+          yaml.each do |name, data|
+            unless data
+              raise Fixture::FormatError, "Bad data for #{@class_name} fixture named #{name} (nil)"
+            end
+            self[name] = Fixture.new(data, @class_name)
+          end
         end
       elsif File.file?(csv_file_path)
         # CSV fixtures
@@ -368,7 +371,7 @@ class Fixture #:nodoc:
       when String
         @fixture = read_fixture_file(fixture)
       else
-        raise ArgumentError, "Bad fixture argument #{fixture.inspect}"
+        raise ArgumentError, "Bad fixture argument #{fixture.inspect} during creation of #{class_name} fixture"
     end
 
     @class_name = class_name
